fixed footer stuff

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <h2 class="header text_h scrollspy" id="contact"> Get Connected </h2>
             <div class="row">
                 <div class="col l6 s12">
-                    <form class="col s12" action="assets/contact.php" method="post">
+                    <form class="col s12" action="contact.php" method="post">
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="mdi-action-account-circle prefix white-text"></i>
@@ -248,35 +248,33 @@
                                 <label for="icon_prefix2" class="white-text">Message</label>
                             </div>
                             <div class="col offset-s7 s5">
-                                <button class="btn waves-effect waves-light red darken-1" type="submit">Submit
+                                <button class="btn waves-effect waves-light red darken-1" value='submit' type="submit">Submit
                                     <i class="mdi-content-send right white-text"></i>
                                 </button>
                             </div>
                         </div>
                     </form>
                 </div>
-                <div class="col l3 s12">
+                <div id='social' class="col l3 s12">
                     <h5 class="white-text">Social</h5>
                     <ul>
                         <li>
-                            <a class="white-text" href="https://www.facebook.com/jcfriese">
-                                <i class="small fa fa-facebook white-text"></i> Facebook
-                            </a>
-                        </li>
-                        <li>
                             <a class="white-text" href="https://github.com/phist210">
-                                <i class="small fa fa-github white-text"></i> Github
+                                Github <i class="small fa fa-github white-text"></i>
                             </a>
                         </li>
                         <li>
-                            <a class="white-text" href="https://www.linkedin.com/in/joshuafriese">
-                                <i class="small fa fa-linkedin white-text"></i> Linkedin
+                            <a class="white-text" href="https://www.twitter.com/jawshology">
+                                Twitter <i class="small fa fa-twitter white-text"></i>
                             </a>
                         </li>
+                        <a class="white-text" href="https://www.linkedin.com/in/joshuafriese">
+                                Linkedin <i class="small fa fa-linkedin white-text"></i>
+                            </a>
                         </li>
                         <li>
                             <a class="white-text" href="https://www.soundcloud.com/phistmusic">
-                                <i class="small fa fa-soundcloud white-text"></i> Soundcloud
+                                Soundcloud <i class="small fa fa-soundcloud white-text"></i>
                             </a>
                         </li>
                     </ul>
