--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
     <!-- Links -->
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel='stylesheet' href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css' />
     <link rel='stylesheet' href='assets/css/fontawesome-pro-solid.css'>
     <link rel='stylesheet' href='assets/css/fontawesome-pro-core.css'>
