updated resume file, added real content to about portion, added hoboseafood project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="loader-section section-right"></div>
 
     </div>
-    <!--Navigation-->
+
+    <!--                                     Navigation                                   -->
     <div class="navbar-fixed">
         <nav id="nav_f" class="default_color" role="navigation">
             <div class="container">
@@ -81,7 +82,7 @@
         </nav>
     </div>
 
-    <!--Hero-->
+    <!--                                              Hero                                        -->
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
             <div class='bubble'>
@@ -104,7 +105,7 @@
         </a>
     </div>
 
-    <!--Intro and service-->
+    <!--                                   Intro and service                                 -->
     <div id="intro" class="section scrollspy">
         <div class="container">
             <div class="row">
@@ -123,22 +124,25 @@
                     <div class="col s12 m4 l4">
                         <div class="center promo promo-example">
                             <i class="mdi-image-flash-on"></i>
-                            <h5 class="promo-caption">Detail Oriented</h5>
-                            <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                            <h5 class="promo-caption">Detail-oriented</h5>
+                            <p class="light center">I love the famous quote by President Abraham Lincoln,
+                                <span class='quote'>"Give me six hours to chop down a tree and I will spend the first four sharpening the axe." </span> &nbsp;because it encompasses the idea of taking the time to get it right.</p>
                         </div>
                     </div>
                     <div class="col s12 m4 l4">
                         <div class="center promo promo-example">
                             <i class="mdi-social-group"></i>
-                            <h5 class="promo-caption">User Experience Focused</h5>
-                            <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                            <h5 class="promo-caption">User Experience-focused</h5>
+                            <p class="light center">Having grown up working in the service industry and experiencing customer satisfaction in it's truest form, I know what it takes to make the client say,
+                                <span class='quote'>"Wow, you've really done it".</span></p>
                         </div>
                     </div>
                     <div class="col s12 m4 l4">
                         <div class="center promo promo-example">
                             <i class="mdi-hardware-desktop-windows"></i>
-                            <h5 class="promo-caption">Goal Driven</h5>
-                            <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                            <h5 class="promo-caption">Goal-driven</h5>
+                            <p class="light center">Dr. Stephen Covey said it and it is the motto of my graduating school.
+                                <span class='quote'>"Begin with the end in mind."</span>, meaning the envisionment and dedication to the vision of the completed and appreciated work will make it so.
                             </p>
                         </div>
                     </div>
@@ -169,28 +173,32 @@
                             <span class="card-title grey-text text-darken-4">Masterpeace
                                 <i class="mdi-navigation-close right"></i>
                             </span>
-                            <p>Under construction...</p>
+                            <p>A full-scale web application that integrates an art gallery with social media. Users can only post content and leave positive feedback in the form of like buttons, breaking the norm in social networking.
+                                <a target="_blank" href="https://github.com/phist210/masterpeace">Masterpeace</a>
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/img/questionbox.jpg">
+                            <img class="activator" src="assets/img/shrimpin.png">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Question Box
+                            <span class="card-title activator grey-text text-darken-4">Hobo Seafood
                                 <i class="mdi-navigation-more-vert right"></i>
                             </span>
                             <p>
-                                <a target="_blank" href="http://sheltered-citadel-50707.herokuapp.com/">Question Box, hosted by Heroku</a>
+                                <a target="_blank" href="https://hoboseafood.netlify.com/">Hobo Seafood, hosted by Netlify</a>
                             </p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Question Box
+                            <span class="card-title grey-text text-darken-4">Hobo Seafood
                                 <i class="mdi-navigation-close right"></i>
                             </span>
-                            <p>Under construction...</p>
+                            <p>An ecommerce platform for the shrimp farmers in Swan Quarter, NC. Powered by Snipcart for handling transactions and the cart itself, Sanity.IO for content manangment and Netlify for deploying and hosting the app.
+                                <a target="_blank" href="https://hoboseafood.netlify.com/">Hobo Seafood</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -211,7 +219,9 @@
                             <span class="card-title grey-text text-darken-4">Kanban Board
                                 <i class="mdi-navigation-close right"></i>
                             </span>
-                            <p>Under construction...</p>
+                            <p>A pet project where myself and a colleague implemented a task manager similar to Trello using Django and vanilla CSS and JS.
+                                <a target="_blank" href="https://mysterious-meadow-31968.herokuapp.com/kanban">Kanban Board</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -219,19 +229,19 @@
         </div>
     </div>
 
-    <!--Parallax-->
+    <!--                                      Parallax & Footer                                  -->
     <div class="parallax-container">
         <div class="parallax">
             <img width=300 height=800 src="assets/img/studio.jpg">
         </div>
     </div>
-    <!--Footer-->
+
     <footer class="page-footer default_color scrollspy">
         <div class="container">
             <h2 class="header text_h scrollspy" id="contact"> Get Connected </h2>
             <div class="row">
                 <div class="col l6 s12">
-                    <form class="col s12" action="contact.php" method="post">
+                    <form class="col s12" action="contact.php" method="POST">
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="mdi-action-account-circle prefix white-text"></i>
