Fixed a link target

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <p class='inner-bio'>
                             I am very enthusiastic about problem solving, headbanging and
                             </br> sunny, open fields with my dog,
-                            <a class='special-text' href='assets/assets/img/adidog.jpg'>Atlas. 🐶</a>
+                            <a class='special-text' href='assets/img/adidog.jpg'>Atlas. 🐶</a>
                         </p>
                     </p>
                 </div>
