--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
 
     <footer class="page-footer default_color scrollspy">
         <div class="container">
-            <h2 class="header text_h scrollspy" id="contact"> Get Connected </h2>
+            <h2 class="header text_h scrollspy" id="contact">Get Connected </h2>
             <div class="row">
                 <div class="col l6 s12">
-                    <form class="col s12" action="contact.php" method="POST">
+                    <form class="col s12" action="https://formspree.io/josh.friese@gmail.com" method="POST">
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="mdi-action-account-circle prefix white-text"></i>
