--- a/index.html
+++ b/index.html
@@ -87,14 +87,9 @@
         <div class="container">
             <div class='bubble'>
                 <h1 class="text_h center header cd-headline letters type">
-                    <span>I love</span>
+                    <span></span>
                     <span class="cd-words-wrapper waiting">
-                        <b class="is-visible">typing...</b>
-                        <b>developing...</b>
-                        <b>learning...</b>
-                        <b>engineering...</b>
-                        <b>designing...</b>
-                        <b>exploring...</b>
+                        <b class="is-visible">Under construction...</b>
                     </span>
                 </h1>
             </div>
@@ -104,213 +99,6 @@
             <img class="circle responsive-img pic" title='I went to Santa Cruz, CA, once.' src='https://i.imgur.com/V9RhRkm.jpg' />
         </a>
     </div>
-
-    <!--                                   Intro and service                                 -->
-    <div id="intro" class="section scrollspy">
-        <div class="container">
-            <div class="row">
-                <div class="col s12 m12 l12">
-                    <p class='bio'>
-                        My name is
-                        <span class='name'>Joshua C. Friese</span> and...
-                        <p class='inner-bio'>
-                            I am very enthusiastic about problem solving, headbanging and
-                            </br> sunny, open fields with my dog,
-                            <a class='special-text' href='assets/img/adidog.jpg'>Atlas. 🐶</a>
-                        </p>
-                    </p>
-                </div>
-                <div class='row'>
-                    <div class="col s12 m4 l4">
-                        <div class="center promo promo-example">
-                            <i class="mdi-image-flash-on"></i>
-                            <h5 class="promo-caption">Detail-oriented</h5>
-                            <p class="light center">I love the famous quote by President Abraham Lincoln,
-                                <span class='quote'>"Give me six hours to chop down a tree and I will spend the first four sharpening the axe." </span> &nbsp;because it encompasses the idea of taking the time to get it right.</p>
-                        </div>
-                    </div>
-                    <div class="col s12 m4 l4">
-                        <div class="center promo promo-example">
-                            <i class="mdi-social-group"></i>
-                            <h5 class="promo-caption">User Experience-focused</h5>
-                            <p class="light center">Having grown up working in the service industry and experiencing customer satisfaction in it's truest form, I know what it takes to make the client say,
-                                <span class='quote'>"Wow, you've really done it".</span></p>
-                        </div>
-                    </div>
-                    <div class="col s12 m4 l4">
-                        <div class="center promo promo-example">
-                            <i class="mdi-hardware-desktop-windows"></i>
-                            <h5 class="promo-caption">Goal-driven</h5>
-                            <p class="light center">Dr. Stephen Covey said it and it is the motto of my graduating school.
-                                <span class='quote'>"Begin with the end in mind."</span>, meaning the envisionment and dedication to the vision of the completed and appreciated work will make it so.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--Work-->
-    <div class="section scrollspy" id="work">
-        <div class="container">
-            <h2 class="header text_b">Work </h2>
-            <div class="row">
-                <div class="col s12 m4 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/img/logo.png">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Masterpeace
-                                <i class="mdi-navigation-more-vert right"></i>
-                            </span>
-                            <p>
-                                <a target="_blank" href="https://masterpeace.herokuapp.com">Masterpeace, hosted by Heroku</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Masterpeace
-                                <i class="mdi-navigation-close right"></i>
-                            </span>
-                            <p>A full-scale web application that integrates an art gallery with social media. Users can only post content and leave positive feedback in the form of like buttons, breaking the norm in social networking.
-                                <a target="_blank" href="https://github.com/phist210/masterpeace">Masterpeace</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m4 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/img/shrimpin.png">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Hobo Seafood
-                                <i class="mdi-navigation-more-vert right"></i>
-                            </span>
-                            <p>
-                                <a target="_blank" href="https://hoboseafood.netlify.com/">Hobo Seafood, hosted by Netlify</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Hobo Seafood
-                                <i class="mdi-navigation-close right"></i>
-                            </span>
-                            <p>An ecommerce platform for the shrimp farmers in Swan Quarter, NC. Powered by Snipcart for handling transactions and the cart itself, Sanity.IO for content manangment and Netlify for deploying and hosting the app.
-                                <a target="_blank" href="https://hoboseafood.netlify.com/">Hobo Seafood</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m4 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/img/kanban.png">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Kanban Board
-                                <i class="mdi-navigation-more-vert right"></i>
-                            </span>
-                            <p>
-                                <a target="_blank" href="https://mysterious-meadow-31968.herokuapp.com/kanban">Kanban Board, hosted by Heroku</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Kanban Board
-                                <i class="mdi-navigation-close right"></i>
-                            </span>
-                            <p>A pet project where myself and a colleague implemented a task manager similar to Trello using Django and vanilla CSS and JS.
-                                <a target="_blank" href="https://mysterious-meadow-31968.herokuapp.com/kanban">Kanban Board</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--                                      Parallax & Footer                                  -->
-    <div class="parallax-container">
-        <div class="parallax">
-            <img width=300 height=800 src="assets/img/studio.jpg">
-        </div>
-    </div>
-
-    <footer class="page-footer default_color scrollspy">
-        <div class="container">
-            <h2 class="header text_h scrollspy" id="contact">Get Connected </h2>
-            <div class="row">
-                <div class="col l6 s12">
-                    <form class="col s12" action="https://formspree.io/josh.friese@gmail.com" method="POST">
-                        <div class="row">
-                            <div class="input-field col s6">
-                                <i class="mdi-action-account-circle prefix white-text"></i>
-                                <input id="icon_prefix" name="name" type="text" class="validate white-text">
-                                <label for="icon_prefix" class="white-text">Name</label>
-                            </div>
-                            <div class="input-field col s6">
-                                <i class="mdi-communication-email prefix white-text"></i>
-                                <input id="icon_email" name="email" type="email" class="validate white-text">
-                                <label for="icon_email" class="white-text">Email</label>
-                            </div>
-                            <div class="input-field col s12">
-                                <i class="mdi-editor-mode-edit prefix white-text"></i>
-                                <textarea id="icon_prefix2" name="message" class="materialize-textarea white-text"></textarea>
-                                <label for="icon_prefix2" class="white-text">Message</label>
-                            </div>
-                            <div class="col offset-s7 s5">
-                                <button class="btn waves-effect waves-light red darken-1" value='submit' type="submit">Submit
-                                    <i class="mdi-content-send right white-text"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div id='social' class="col l3 s12">
-                    <h5 class="white-text">Social</h5>
-                    <ul>
-                        <li>
-                            <a class="white-text" href="https://github.com/phist210">
-                                Github <i class="small fa fa-github white-text"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="white-text" href="https://www.twitter.com/jawshology">
-                                Twitter <i class="small fa fa-twitter white-text"></i>
-                            </a>
-                        </li>
-                        <a class="white-text" href="https://www.linkedin.com/in/joshuafriese">
-                                Linkedin <i class="small fa fa-linkedin white-text"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="white-text" href="https://www.soundcloud.com/phistmusic">
-                                Soundcloud <i class="small fa fa-soundcloud white-text"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">phist210.github.io</h5>
-                    <ul>
-                        <li>
-                            <a class="white-text" href="/">Home</a>
-                        </li>
-                        <li>
-                            <a class="white-text" href="/blog">Blog</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright default_color">
-            <div class="container">
-                Tweaked by
-                <a class="white-text" href="/">Joshua C. Friese</a>. Thanks to
-                <a class="white-text" href="http://materializecss.com/">materializecss</a>.
-            </div>
-        </div>
-    </footer>
 
     <!--  Scripts-->
     <script src="assets/min/plugin-min.js"></script>
