--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Joshua C. Friese - Typist</title>
+    <title>PHIST</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
@@ -37,7 +37,7 @@
         <div class="loader-section section-right"></div>
 
     </div>
-
+<!-- 
     <!--                                     Navigation                                   -->
     <div class="navbar-fixed">
         <nav id="nav_f" class="default_color" role="navigation">
@@ -81,7 +81,7 @@
             </div>
         </nav>
     </div>
-
+ -->
     <!--                                              Hero                                        -->
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
