--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <a href=''>
-            <img class="circle responsive-img pic" title='I went to Santa Cruz, CA, once.' src='https://i.imgur.com/V9RhRkm.jpg' />
+            <img class="circle responsive-img pic" title='I went to Santa Cruz, CA, once.' src='https://static.wixstatic.com/media/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.jpg/v1/fill/w_1666,h_2500,al_c,q_90/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.webp' />
         </a>
     </div>
 
