--- a/index.html
+++ b/index.html
@@ -23,65 +23,6 @@
 </head>
 
 <body id="top" class="scrollspy">
-
-    <!-- Return to top -->
-    <a href="javascript:" id="return-to-top">
-        <i class="fa fa-chevron-up"></i>
-    </a>
-
-    <!-- Pre Loader -->
-    <div id="loader-wrapper">
-        <div id="loader"></div>
-
-        <div class="loader-section section-left"></div>
-        <div class="loader-section section-right"></div>
-
-    </div>
-<!-- 
-    <!--                                     Navigation                                   -->
-    <div class="navbar-fixed">
-        <nav id="nav_f" class="default_color" role="navigation">
-            <div class="container">
-                <div class="nav-wrapper">
-                    <a href="#" id="logo-container" class="brand-logo">Joshua C. Friese</a>
-                    <ul class="right hide-on-med-and-down">
-                        <li>
-                            <a href="#intro">Me</a>
-                        </li>
-                        <li>
-                            <a href="#work">Work</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                        </li>
-                        <li>
-                            <a href="assets/JoshFrieseResume.pdf">Résumé</a>
-                        </li>
-                    </ul>
-                    <ul id="nav-mobile" class="side-nav">
-                        <li>
-                            <a href="#intro">Me</a>
-                        </li>
-                        <li>
-                            <a href="#work">Work</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                        </li>
-                        <li>
-                            <a href="assets/JoshFrieseResume.pdf">Résumé</a>
-                        </li>
-                    </ul>
-                    <a href="#" data-activates="nav-mobile" class="button-collapse">
-                        <i class="mdi-navigation-menu"></i>
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </div>
- -->
     <!--                                              Hero                                        -->
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
@@ -96,7 +37,7 @@
         </div>
 
         <a href=''>
-            <img class="circle responsive-img pic" title='I went to Santa Cruz, CA, once.' src='https://static.wixstatic.com/media/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.jpg/v1/fill/w_1666,h_2500,al_c,q_90/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.webp' />
+            <img class="circle responsive-img pic" title='Give it time...' src='https://static.wixstatic.com/media/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.jpg/v1/fill/w_1666,h_2500,al_c,q_90/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.webp' />
         </a>
     </div>
 
