--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <div class="container">
             <div class='bubble'>
                 <h1 class="text_h center header cd-headline letters type">
-                    <span></span>
                     <span class="cd-words-wrapper waiting">
                         <b class="is-visible">Under construction...</b>
                     </span>
@@ -36,9 +35,9 @@
             </div>
         </div>
 
-        <a href=''>
+<!--         <a href=''>
             <img class="circle responsive-img pic" title='Give it time...' src='https://static.wixstatic.com/media/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.jpg/v1/fill/w_1666,h_2500,al_c,q_90/25be72_80252c73fdad47b58b41fa2a9634ceb5~mv2.webp' />
-        </a>
+        </a> -->
     </div>
 
     <!--  Scripts-->
