--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name='owner' content='Joshua C. Friese' />
     <meta name='author' content='Joshua C. Friese, josh.friese@gmail.com' />
-    <meta name='description' content='Icons thanks to http://fontawesome.io' />
+    <meta name='description' content='PHIST MUSIC PHISTMUSIC' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Links -->
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/pure/pure-min.css">
-    <link rel="stylesheet" href="/css/pure/grids-responsive-min.css">
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
