--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name='owner' content='Joshua C. Friese' />
     <meta name='author' content='Joshua C. Friese, josh.friese@gmail.com' />
     <meta name='description' content='PHIST MUSIC PHISTMUSIC' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Links -->
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
