--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 </div> -->
 <div class="splash-container">
-    <a href='https://linktr.ee/phistmusic'><img class="logo pure-img-responsive" src="assets/img/logo-white.png"></a>
+    <a class="logo pure-img-responsive" href='https://linktr.ee/phistmusic'><img class="logo pure-img-responsive" src="assets/img/logo-white.png"></a>
     <div class="splash">
         <!-- <h1 class="splash-head">PHIST</h1> -->
         <p class="splash-subhead">
