--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name='owner' content='Joshua C. Friese' />
     <meta name='author' content='Joshua C. Friese, josh.friese@gmail.com' />
-    <meta name='description' content='PHIST MUSIC PHISTMUSIC' />
+    <meta name='description' content='PHIST MUSIC PHISTMUSIC PHIST MUSIC PHISTMUSIC PHIST MUSIC PHISTMUSIC' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Links -->
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
