--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 <div class="splash-container">
     <a class="logo pure-img-responsive" href='https://linktr.ee/phistmusic'><img class="logo pure-img-responsive" src="assets/img/logo-white.png"></a>
     <div class="splash">
-        <!-- <h1 class="splash-head">PHIST</h1> -->
+<!--         <!-- <h1 class="splash-head">PHIST</h1> -->
         <p class="splash-subhead">
             deep bass music from the city of oaks
         </p>
         <p>
             <a href="mailto:bookings@phistmusic.net" class="pure-button pure-button-primary">Book Me</a>
-        </p>
+        </p> -->
     </div>
 </div>
 
