--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
         <h2 class="content-head is-center">
             <a target="_blank" class="social" href="https://facebook.com/phistmusic"><i class="fa-brands fa-facebook-square social"></i></a>
-            <a target="_blank" class="social" href="https://instagram.com/phistmusic"><i class="fa-brands fa-instagram social"></i></a>
+            <a target="_blank" class="social" href="https://instagram.com/_phist"><i class="fa-brands fa-instagram social"></i></a>
             <!-- <a target="_blank" class="social" href="https://phistmusic.bandcamp.com"><i class="fa-brands fa-bandcamp social"></i></a> -->
             <a target="_blank" class="social" href="https://soundcloud.com/phistmusic"><i class="fa-brands fa-soundcloud social"></i></a>
             <a target="_blank" class="social" href="https://open.spotify.com/artist/3GaYogtI1dGpQtY0HU2vOp"><i class="fa-brands fa-spotify social"></i></a>
