--- a/index.html
+++ b/index.html
@@ -14,8 +14,26 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/972b4c7001.js" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+    $(window).on('load', function() {
+        $('#myModal').modal('show');
+    });
+    </script>
 </head>
 <body>
+<div class="modal hide fade" id="myModal">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">×</a>
+        <h3>MERCH PREORDER IS LIVE</h3>
+    </div>
+    <div class="modal-body">
+        <a href="https://shop.phistmusic.net/">Shop now</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn">Close</a>
+<!--         <a href="#" class="btn btn-primary">Save changes</a> -->
+    </div>
+</div>
 <div class="splash-container">
     <a class="logo pure-img-responsive" href='https://linktr.ee/phistmusic'><img class="logo pure-img-responsive" src="assets/img/logo-white.png"></a>
     <div class="splash">
