--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/972b4c7001.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
-    $(window).on('load', function() {
-        $('#myModal').modal('show');
-    });
+        $(document).ready('load', function() {
+            $('#myModal').modal('show');
+        });
     </script>
 </head>
 <body>
